[project]
name = "qDNA"
description = "A package to calculate lifetimes, average charge separation, and dipole moments of excited states along DNA within the formalism of open quantum systems."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

authors = [
    { name = "Dennis Herb", email = "dennis.herb@uni-ulm.de" },
]
dynamic = ["version"]

dependencies = [
    "pandas==2.1.4",
    "qutip==4.7.5",
    "pyyaml==6.0.1",
    "seaborn==0.12.2",
    "tqdm==4.66.4",
    "customtkinter==5.2.2",
    "scipy==1.11.4",
]

[project.urls]
documentation = "https://quantumdna.readthedocs.io/en/latest/"
repository = "https://github.com/dehe1011/QuantumDNA"
tutorials = "https://github.com/dehe1011/QuantumDNA-notbooks"

# Optional dependencies for documentation
[project.optional-dependencies]
doc = ["sphinx>=3.0", "sphinx_rtd_theme", "sphinxcontrib-bibtex", "numpydoc"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
