[project]
name = "qDNA"
description = "A package to calculate lifetimes, average charge separation, and dipole moments of excited states along DNA within the formalism of open quantum systems."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

authors = [
    { name = "Dennis Herb", email = "dennis.herb@uni-ulm.de" },
]
dynamic = ["version"]

dependencies = [
    "pandas",
    "qutip",
    "pyyaml",
    "matplotlib",
    "tqdm",
    "customtkinter",
    "openpyxl",
]

[project.urls]
documentation = "https://quantumdna.readthedocs.io/en/latest/"
repository = "https://github.com/dehe1011/QuantumDNA"
tutorials = "https://github.com/dehe1011/QuantumDNA-notbooks"

# Optional dependencies for documentation
[project.optional-dependencies]
doc = ["sphinx>=3.0", "sphinx_rtd_theme", "sphinxcontrib-bibtex", "numpydoc"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
