[project]
name = "qDNA"
description = "A package to calculate lifetimes, average charge separation, and dipole moments of excited states along DNA within the formalism of open quantum systems."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

authors = [
    { name = "Dennis Herb", email = "dennis.herb@uni-ulm.de" },
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["qDNA", "qDNA.gui"]

[tool.setuptools.dynamic]
version = {attr = "qDNA.__version__"}
dependencies = {file = "requirements/requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev-requirements.txt" }
docs = { file = "requirements/doc-requirements.txt" }

[project.urls]
documentation = "https://quantumdna.readthedocs.io/en/latest/"
repository = "https://github.com/dehe1011/QuantumDNA"
tutorials = "https://github.com/dehe1011/QuantumDNA-notbooks"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
